--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -128,8 +128,7 @@
     line-height: 1.2;
     margin: 20px auto 25px;
     width: 800px;
-    /* color: #fff; */
-    color: yellow;
+    color: #fff;
 }
 .pxl-content-slide .pxl-description {
     font-size: 16px;
