--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -132,7 +132,7 @@
         visibility: hidden;
         opacity: 0;
         z-index: -1;
-        max-height: 80vh;
+        min-height: 100vh;
         overflow: scroll;
     }
     .site-navigation.navigation-open {
