--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -56,6 +56,7 @@
   transition: 0.3s ease;
   border-radius: 100%;
   user-select: none;
+  z-index: 99;
 }
 
 /* Position the "next button" to the right */
@@ -73,10 +74,10 @@
         font-size: 16px;
     }
     .next {
-        right: 30px;
+        right: 15px;
     }
     .prev {
-        left: 30px;
+        left: 15px;
     }
 }
 /* @media (max-width: 767px) {
