--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -238,6 +238,7 @@
         align-items: center;
         flex-grow: 1;
         justify-content: center;
+        max-height: 60px;
     }
 }
 @media (max-width: 1024px) {
